[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "databricks>=0.2",
    "databricks-agents",
    "dspy>=3.0.4",
    "grpcio-tools>=1.76.0",
    "jupyter>=1.1.1",
    "mlflow[databricks]>=3.7.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruff>=0.14.8",
    "whenever",
]
